--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="top">
             <div class="logo-clear">
                 <h1 id="logo">BCAUSY</h1>
+                <h3>digital calculator</h3>
                 <button type="button" id="clearButton" class="sPad">clear</button>
             </div>
             <div class="display">
