added all calculation functions, need to finish display

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 </div>
                 <div class="display">
                     <span class="digit" id="num1">85</span>
-                    <span class=="digit" id="operator">x</span>
+                    <span class=="digit" id="operator">&times</span>
                     <span class="digit" id="num2">941</span>
                     <span class="digit">=</span>
-                    <span class="digit" id="result">80085</span>
+                    <span class="digit" id="result">8008</span>
                 </div>
             </div>
             <div class="middle">
@@ -37,13 +37,13 @@
                 </div>
                 <div class="operators">
                     <div class="delete">
-                        <button class="sPad"value="delete">delete</button>
+                        <button id="delete" class="sPad"value="delete">delete</button>
                     </div>
                     <div class="operators">
                         <button class="op" type="button" value="+">+</button>
                         <button class="op" type="button" value="-">-</button>
-                        <button class="op" type="button" value="/">/</button>
-                        <button class="op" type="button" value="x">x</button>
+                        <button class="op" type="button" value="/">&#247</button>
+                        <button class="op" type="button" value="x">&times</button>
                     </div>
                 </div>
             </div>
