second result needs rework

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span class=="digit" id="operator">&times</span>
                     <span class="digit" id="num2">941</span>
                     <span class="digit">=</span>
-                    <span class="digit" id="result">8008</span>
+                    <span class="digit" id="result">80058</span>
                 </div>
             </div>
             <div class="middle">
@@ -42,18 +42,19 @@
                     <div class="operators">
                         <button class="op" type="button" value="+">+</button>
                         <button class="op" type="button" value="-">-</button>
-                        <button class="op" type="button" value="/">&#247</button>
-                        <button class="op" type="button" value="x">&times</button>
+                        <button class="op" type="button" value="&#247">&#247</button>
+                        <button class="op" type="buttfon" value="&times">&times</button>
                     </div>
                 </div>
             </div>
             <div id="bottom">
                 <button class="pad" type="button" value="0">0</button>
                 <button class="pad" type="button" value=".">.</button>
-                <button class="pad" id="equalsButton" value="=">=</button>
+                <button class="dpad" id="equalsButton" value="=">=</button>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
