disregard previous, this one is corect

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="display">
                     <span class="digit" id="num1">85</span>
-                    <span class=="digit" id="operator">&times</span>
+                    <span class="digit" id="operator">&times</span>
                     <span class="digit" id="num2">941</span>
                     <span class="digit">=</span>
                     <span class="digit" id="result">80058</span>
